--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
             <div class="slider-active dot-style text-center">
                 <div class="single-slider slider-height  d-flex align-items-center" style="background-image: url(img/bg2.jpg);">
                     <div class="container">
-                        <div class="row  pt-200 pb-200">
+                        <div class="row mdh pt-200 pb-200">
                             <div class="col-xl-12 col-lg-12 col-md-12">
                                 <div class="slider-content first">
                                     <h1 class="animate__animated animate__flipInX animate__delay-.5s">Learn English</h1>
-                                    <h4 class="animate__animated animate__flip animate__delay-1s">Sound</h4>
+                                    <h4 class="animate__animated animate__flip animate__delay-1s">(Sound)</h4>
                                 </div>
                             </div>
                         </div>
@@ -82,7 +82,7 @@
 
                 <div class="single-slider slider-height  d-flex align-items-center" style="background-image: url(img/bg2.jpg);">
                     <div class="container">
-                        <div class="row  pt-200 pb-200">
+                        <div class="row mddh pt-200 pb-200">
                             <div class="col-xl-12 col-lg-12 col-md-12">
                                 <div class="slider-content two">
                                     <h1>Consonant <span>(21)</span></h1>
@@ -95,7 +95,7 @@
 
                 <div class="single-slider slider-height  d-flex align-items-center" style="background-image: url(img/bg2.jpg);">
                     <div class="container">
-                        <div class="row  pt-150 pb-150">
+                        <div class="row mmdh pt-150 pb-150">
                             <div class="col-xl-12 col-lg-12 col-md-12">
                                 <div class="slider-content sound">
                                     <h1 data-animation="zoomIn" data-delay=".5s">/p/ - ফ</h1>
