--- a/index.html
+++ b/index.html
@@ -121,6 +121,35 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="single-slider slider-height  d-flex align-items-center" style="background-image: url(img/bg2.jpg);">
+                    <div class="container">
+                        <div class="row mmdh pt-150 pb-150">
+                            <div class="col-xl-12 col-lg-12 col-md-12">
+                                <div class="slider-content sound">
+                                    <h1 data-animation="zoomIn" data-delay=".5s">/b/ - ব</h1>
+                                    <div class="row text-center">
+                                        <div class="col-my d-none d-md-block">
+                                            <h4 data-animation="fadeInLeft" data-delay="1s">Bat ,</h4>
+                                        </div>
+                                        <div class="col-my col-m2">
+                                            <h4 data-animation="zoomInLeft" data-delay="2s">Bad ,</h4>
+                                        </div>
+                                        <div class="col-my col-m2">
+                                            <h4 data-animation="zoomIn" data-delay="3s">Boy ,</h4>
+                                        </div>
+                                        <div class="col-my col-m2">
+                                            <h4 data-animation="zoomInRight" data-delay="4s">Ball ,</h4>
+                                        </div>
+                                        <div class="col-my d-none d-md-block">
+                                            <h4 data-animation="fadeInRight" data-delay="5s">Bullet</h4>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
 
             <div class="slide-prev slide-arrow d-none d-md-block">
