--- a/presentation.html
+++ b/presentation.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Learn English</title>
+        <title>Presentation</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -38,22 +38,22 @@
         <!-- Add your site or application content here -->
         
         <!-- header-area start -->
-        <header class="fixed-top home">
+        <header class="fixed-top">
             <div class="container">
                 <div class="row">
                     <div class="col-xl-2 col-lg-2 col-md-3 col-4">
-                        <div class="logo-area">
-                            <a href="index.html"><img src="img/logo.png" alt=""></a>
+                        <div class="logo-area la-2">
+                            <a href="index.html"><img src="img/logo-2.png" alt=""></a>
                         </div>
                     </div>
                     <div class="col-xl-10 col-lg-10 col-md-9 col-8">
-                        <div class="main-menu home f-right">
+                        <div class="main-menu f-right">
                             <nav id="mobile-menu">
                                 <ul>
                                     <li><a href="index.html">Sound</a></li>
                                     <li><a href="error.html">Video</a></li>
                                     <li><a href="error.html">Sound</a></li>
-                                    <li><a href="error.html">Presentation</a></li>
+                                    <li><a href="presentation.html">Presentation</a></li>
                                     <li><a href="error.html">Details</a></li>
                                 </ul>
                             </nav>
