--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                                     <li><a href="index.html">Sound</a></li>
                                     <li><a href="error.html">Video</a></li>
                                     <li><a href="error.html">Sound</a></li>
-                                    <li><a href="error.html">Presentation</a></li>
+                                    <li><a href="presentation.html">Presentation</a></li>
                                     <li><a href="error.html">Details</a></li>
                                 </ul>
                             </nav>
@@ -101,7 +101,7 @@
                                 <div class="slider-content sound">
                                     <h1 data-animation="zoomIn" data-delay=".5s">/p/ - ফ</h1>
                                     <div class="row text-center">
-                                        <div class="col-my">
+                                        <div class="col-my d-none d-md-block">
                                             <h4 data-animation="fadeInLeft" data-delay="1s">Pen ,</h4>
                                         </div>
                                         <div class="col-my">
@@ -110,7 +110,7 @@
                                         <div class="col-my">
                                             <h4 data-animation="zoomIn" data-delay="3s">Public ,</h4>
                                         </div>
-                                        <div class="col-my d-none d-md-block">
+                                        <div class="col-my">
                                             <h4 data-animation="zoomInRight" data-delay="4s">Polite ,</h4>
                                         </div>
                                         <div class="col-my d-none d-md-block">
@@ -130,16 +130,16 @@
                                 <div class="slider-content sound">
                                     <h1 data-animation="zoomIn" data-delay=".5s">/b/ - ব</h1>
                                     <div class="row text-center">
-                                        <div class="col-my ">
+                                        <div class="col-my d-none d-md-block">
                                             <h4 data-animation="fadeInLeft" data-delay="1s">Bad ,</h4>
                                         </div>
-                                        <div class="col-my ">
+                                        <div class="col-my">
                                             <h4 data-animation="zoomInLeft" data-delay="2s">Boy ,</h4>
                                         </div>
-                                        <div class="col-my ">
+                                        <div class="col-my">
                                             <h4 data-animation="zoomIn" data-delay="3s">Ball ,</h4>
                                         </div>
-                                        <div class="col-my d-none d-md-block">
+                                        <div class="col-my">
                                             <h4 data-animation="zoomInRight" data-delay="4s">Bat ,</h4>
                                         </div>
                                         <div class="col-my d-none d-md-block">
@@ -159,7 +159,7 @@
                                 <div class="slider-content sound">
                                     <h1 data-animation="zoomIn" data-delay=".5s">/t/ - ঠ</h1>
                                     <div class="row text-center">
-                                        <div class="col-my">
+                                        <div class="col-my d-none d-md-block">
                                             <h4 data-animation="fadeInLeft" data-delay="1s">Ten ,</h4>
                                         </div>
                                         <div class="col-my">
@@ -168,7 +168,7 @@
                                         <div class="col-my">
                                             <h4 data-animation="zoomIn" data-delay="3s">taka ,</h4>
                                         </div>
-                                        <div class="col-my d-none d-md-block">
+                                        <div class="col-my">
                                             <h4 data-animation="zoomInRight" data-delay="4s">Touch ,</h4>
                                         </div>
                                         <div class="col-my d-none d-md-block">
