--- a/presentation.html
+++ b/presentation.html
@@ -38,7 +38,7 @@
         <!-- Add your site or application content here -->
         
         <!-- header-area start -->
-        <header class="fixed-top">
+        <header class="fixed-top pres">
             <div class="container">
                 <div class="row">
                     <div class="col-xl-2 col-lg-2 col-md-3 col-4">
@@ -53,7 +53,12 @@
                                     <li><a href="index.html">Sound</a></li>
                                     <li><a href="error.html">Video</a></li>
                                     <li><a href="error.html">Sound</a></li>
-                                    <li><a href="presentation.html">Presentation</a></li>
+                                    <li><a href="presentation.html">Presentation</a>
+                                        <ul class="submenu">
+                                            <li><a href="#Classmate">Classmate</a></li>
+                                            <li><a href="#weather">Weather</a></li>
+                                        </ul>
+                                    </li>
                                     <li><a href="error.html">Details</a></li>
                                 </ul>
                             </nav>
@@ -66,127 +71,75 @@
         <!-- header-area end -->
 
         <!-- slider-area start -->
-        <div class="slider-area">
-            <div class="slider-active dot-style text-center">
-                <div class="single-slider slider-height  d-flex align-items-center" style="background-image: url(img/bg2.jpg);">
+        <div class="presentation">
+            <div class="weather text-center">
+                <div id="weather" class="d-flex align-items-center pt-100 pb-50" style="background-image: url(img/wather.jpg); height: 100%; width: 100%; background-size: cover; background-position: center 0;">
                     <div class="container">
-                        <div class="row mdh pt-200 pb-200">
-                            <div class="col-xl-12 col-lg-12 col-md-12">
-                                <div class="slider-content first">
-                                    <h1 class="animate__animated animate__flipInX animate__delay-.5s">Learn English</h1>
-                                    <h4 class="animate__animated animate__flip animate__delay-1s">(Sound)</h4>
+                        <div class="row">
+                            <div class="col-xl-3 col-lg-3 col-md-3">
+                                <div class="w-head">
+                                    <h1>Weather</h1>
+                                    <h2><span>N</span><span>e</span><span>w</span><span>s</span></h2>
                                 </div>
+                                <div class="download pt-80 pb-50">
+                                    <a href="download/presentation/weather.pdf" download="Weather.pdf">Download file <i class="fas fa-download"></i></a>
+                                </div>
+                            </div>
+
+                            <div class="col-xl-9 col-lg-9 col-md-9">
+                                <table>
+                                    <tbody>
+                                        <tr>
+                                            <th>Division</th>
+                                            <th>Highest <span>(tp)</span></th>
+                                            <th>Lowest <span>(tp)</span></th>
+                                        </tr>
+                                        <tr>
+                                            <td>Dhaka</td>
+                                            <td>44&#8451;</td>
+                                            <td>32&#8451;</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Rajshahi</td>
+                                            <td>30&#8451;</td>
+                                            <td>28&#8451;</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Khulna</td>
+                                            <td>40&#8451;</td>
+                                            <td>30&#8451;</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Barishal</td>
+                                            <td>28&#8451;</td>
+                                            <td>22&#8451;</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Chittagong</td>
+                                            <td>25&#8451;</td>
+                                            <td>17&#8451;</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Mymensingh</td>
+                                            <td>29&#8451;</td>
+                                            <td>24&#8451;</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Rangpur</td>
+                                            <td>32&#8451;</td>
+                                            <td>26&#8451;</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Sylhet</td>
+                                            <td>20&#8451;</td>
+                                            <td>20&#8451;</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
                             </div>
                         </div>
                     </div>
                 </div>
-
-                <div class="single-slider slider-height  d-flex align-items-center" style="background-image: url(img/bg2.jpg);">
-                    <div class="container">
-                        <div class="row mddh pt-200 pb-200">
-                            <div class="col-xl-12 col-lg-12 col-md-12">
-                                <div class="slider-content two">
-                                    <h1>Consonant <span>(21)</span></h1>
-                                    <h4>Sound <span>(24)</span></h4>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="single-slider slider-height  d-flex align-items-center" style="background-image: url(img/bg2.jpg);">
-                    <div class="container">
-                        <div class="row mmdh pt-150 pb-150">
-                            <div class="col-xl-12 col-lg-12 col-md-12">
-                                <div class="slider-content sound">
-                                    <h1 data-animation="zoomIn" data-delay=".5s">/p/ - ফ</h1>
-                                    <div class="row text-center">
-                                        <div class="col-my">
-                                            <h4 data-animation="fadeInLeft" data-delay="1s">Pen ,</h4>
-                                        </div>
-                                        <div class="col-my">
-                                            <h4 data-animation="zoomInLeft" data-delay="2s">Pencil ,</h4>
-                                        </div>
-                                        <div class="col-my">
-                                            <h4 data-animation="zoomIn" data-delay="3s">Public ,</h4>
-                                        </div>
-                                        <div class="col-my d-none d-md-block">
-                                            <h4 data-animation="zoomInRight" data-delay="4s">Polite ,</h4>
-                                        </div>
-                                        <div class="col-my d-none d-md-block">
-                                            <h4 data-animation="fadeInRight" data-delay="5s">Power</h4>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="single-slider slider-height  d-flex align-items-center" style="background-image: url(img/bg2.jpg);">
-                    <div class="container">
-                        <div class="row mmdh pt-150 pb-150">
-                            <div class="col-xl-12 col-lg-12 col-md-12">
-                                <div class="slider-content sound">
-                                    <h1 data-animation="zoomIn" data-delay=".5s">/b/ - ব</h1>
-                                    <div class="row text-center">
-                                        <div class="col-my ">
-                                            <h4 data-animation="fadeInLeft" data-delay="1s">Bad ,</h4>
-                                        </div>
-                                        <div class="col-my ">
-                                            <h4 data-animation="zoomInLeft" data-delay="2s">Boy ,</h4>
-                                        </div>
-                                        <div class="col-my ">
-                                            <h4 data-animation="zoomIn" data-delay="3s">Ball ,</h4>
-                                        </div>
-                                        <div class="col-my d-none d-md-block">
-                                            <h4 data-animation="zoomInRight" data-delay="4s">Bat ,</h4>
-                                        </div>
-                                        <div class="col-my d-none d-md-block">
-                                            <h4 data-animation="fadeInRight" data-delay="5s">Bullet</h4>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="single-slider slider-height  d-flex align-items-center" style="background-image: url(img/bg2.jpg);">
-                    <div class="container">
-                        <div class="row mmdh pt-150 pb-150">
-                            <div class="col-xl-12 col-lg-12 col-md-12">
-                                <div class="slider-content sound">
-                                    <h1 data-animation="zoomIn" data-delay=".5s">/t/ - ঠ</h1>
-                                    <div class="row text-center">
-                                        <div class="col-my">
-                                            <h4 data-animation="fadeInLeft" data-delay="1s">Ten ,</h4>
-                                        </div>
-                                        <div class="col-my">
-                                            <h4 data-animation="zoomInLeft" data-delay="2s">Two ,</h4>
-                                        </div>
-                                        <div class="col-my">
-                                            <h4 data-animation="zoomIn" data-delay="3s">taka ,</h4>
-                                        </div>
-                                        <div class="col-my d-none d-md-block">
-                                            <h4 data-animation="zoomInRight" data-delay="4s">Touch ,</h4>
-                                        </div>
-                                        <div class="col-my d-none d-md-block">
-                                            <h4 data-animation="fadeInRight" data-delay="5s">total</h4>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="slide-prev slide-arrow d-none d-md-block">
-                <i class="fas fa-angle-left"></i>
-            </div>
-            <div class="slide-next slide-arrow d-none d-md-block">
-                <i class="fas fa-angle-right"></i>
             </div>
         </div>
         <!-- slider-area end -->
