Weather for phone

--- a/index.html
+++ b/index.html
@@ -52,8 +52,13 @@
                                 <ul>
                                     <li><a href="index.html">Sound</a></li>
                                     <li><a href="error.html">Video</a></li>
-                                    <li><a href="error.html">Sound</a></li>
-                                    <li><a href="presentation.html">Presentation</a></li>
+                                    <li><a href="https://dictionary.cambridge.org/">Dictionary</a></li>
+                                    <li><a href="presentation.html">Presentation</a>
+                                        <ul class="submenu">
+                                            <li><a href="#Classmate">Classmate</a></li>
+                                            <li><a href="#weather">Weather</a></li>
+                                        </ul>
+                                    </li>
                                     <li><a href="error.html">Details</a></li>
                                 </ul>
                             </nav>
