--- a/presentation.html
+++ b/presentation.html
@@ -52,7 +52,7 @@
                                 <ul>
                                     <li><a href="index.html">Sound</a></li>
                                     <li><a href="error.html">Video</a></li>
-                                    <li><a href="error.html">Sound</a></li>
+                                    <li><a href="https://dictionary.cambridge.org/">Dictionary</a></li>
                                     <li><a href="presentation.html">Presentation</a>
                                         <ul class="submenu">
                                             <li><a href="#Classmate">Classmate</a></li>
@@ -64,7 +64,7 @@
                             </nav>
                         </div>
                     </div>
-                    <div class="mobile-menu"></div>
+                    <div class="mobile-menu two"></div>
                 </div>
             </div>
         </header>
@@ -81,7 +81,7 @@
                                     <h1>Weather</h1>
                                     <h2><span>N</span><span>e</span><span>w</span><span>s</span></h2>
                                 </div>
-                                <div class="download pt-80 pb-50">
+                                <div class="download pt-100 pb-50">
                                     <a href="download/presentation/weather.pdf" download="Weather.pdf">Download file <i class="fas fa-download"></i></a>
                                 </div>
                             </div>
