--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                                             <h4 data-animation="zoomIn" data-delay="3s">Public<span>,</span></h4>
                                         </div>
                                         <div class="col-my">
-                                            <h4 data-animation="zoomInRight" data-delay="4s">Polite<span>,</span></h4>
+                                            <h4 data-animation="zoomInRight" data-delay="4s">Polite<span class="d-none d-md-block">,</span></h4>
                                         </div>
                                         <div class="col-my d-none d-md-block">
                                             <h4 data-animation="fadeInRight" data-delay="5s">Power</h4>
@@ -145,7 +145,7 @@
                                             <h4 data-animation="zoomIn" data-delay="3s">Ball<span>,</span></h4>
                                         </div>
                                         <div class="col-my">
-                                            <h4 data-animation="zoomInRight" data-delay="4s">Bat<span>,</span></h4>
+                                            <h4 data-animation="zoomInRight" data-delay="4s">Bat<span class="d-none d-md-block">,</span></h4>
                                         </div>
                                         <div class="col-my d-none d-md-block">
                                             <h4 data-animation="fadeInRight" data-delay="5s">Bullet</h4>
@@ -174,7 +174,7 @@
                                             <h4 data-animation="zoomIn" data-delay="3s">taka<span>,</span></h4>
                                         </div>
                                         <div class="col-my">
-                                            <h4 data-animation="zoomInRight" data-delay="4s">Touch<span>,</span></h4>
+                                            <h4 data-animation="zoomInRight" data-delay="4s">Touch<span class="d-none d-md-block">,</span></h4>
                                         </div>
                                         <div class="col-my d-none d-md-block">
                                             <h4 data-animation="fadeInRight" data-delay="5s">total</h4>
@@ -203,7 +203,7 @@
                                             <h4 data-animation="zoomIn" data-delay="3s">Do<span>,</span></h4>
                                         </div>
                                         <div class="col-my">
-                                            <h4 data-animation="zoomInRight" data-delay="4s">Drama<span>,</span></h4>
+                                            <h4 data-animation="zoomInRight" data-delay="4s">Drama<span class="d-none d-md-block">,</span></h4>
                                         </div>
                                         <div class="col-my d-none d-md-block">
                                             <h4 data-animation="fadeInRight" data-delay="5s">Domestic</h4>
@@ -232,7 +232,7 @@
                                             <h4 data-animation="zoomIn" data-delay="3s">Can<span>,</span></h4>
                                         </div>
                                         <div class="col-my">
-                                            <h4 data-animation="zoomInRight" data-delay="4s">Queen<span>,</span></h4>
+                                            <h4 data-animation="zoomInRight" data-delay="4s">Queen<span class="d-none d-md-block">,</span></h4>
                                         </div>
                                         <div class="col-my d-none d-md-block">
                                             <h4 data-animation="fadeInRight" data-delay="5s">Catch</h4>
@@ -261,7 +261,7 @@
                                             <h4 data-animation="zoomIn" data-delay="3s">Gold<span>,</span></h4>
                                         </div>
                                         <div class="col-my">
-                                            <h4 data-animation="zoomInRight" data-delay="4s">Go<span>,</span></h4>
+                                            <h4 data-animation="zoomInRight" data-delay="4s">Go<span class="d-none d-md-block">,</span></h4>
                                         </div>
                                         <div class="col-my d-none d-md-block">
                                             <h4 data-animation="fadeInRight" data-delay="5s">Glamour</h4>
@@ -290,7 +290,7 @@
                                             <h4 data-animation="zoomIn" data-delay="3s">Fat<span>,</span></h4>
                                         </div>
                                         <div class="col-my">
-                                            <h4 data-animation="zoomInRight" data-delay="4s">Father<span>,</span></h4>
+                                            <h4 data-animation="zoomInRight" data-delay="4s">Father<span class="d-none d-md-block">,</span></h4>
                                         </div>
                                         <div class="col-my d-none d-md-block">
                                             <h4 data-animation="fadeInRight" data-delay="5s">football</h4>
@@ -319,7 +319,7 @@
                                             <h4 data-animation="zoomIn" data-delay="3s">Very<span>,</span></h4>
                                         </div>
                                         <div class="col-my">
-                                            <h4 data-animation="zoomInRight" data-delay="4s">Vital<span>,</span></h4>
+                                            <h4 data-animation="zoomInRight" data-delay="4s">Vital<span class="d-none d-md-block">,</span></h4>
                                         </div>
                                         <div class="col-my d-none d-md-block">
                                             <h4 data-animation="fadeInRight" data-delay="5s">Vase</h4>
@@ -348,7 +348,7 @@
                                             <h4 data-animation="zoomIn" data-delay="3s">Sorry<span>,</span></h4>
                                         </div>
                                         <div class="col-my">
-                                            <h4 data-animation="zoomInRight" data-delay="4s">Sir<span>,</span></h4>
+                                            <h4 data-animation="zoomInRight" data-delay="4s">Sir<span class="d-none d-md-block">,</span></h4>
                                         </div>
                                         <div class="col-my d-none d-md-block">
                                             <h4 data-animation="fadeInRight" data-delay="5s">See</h4>
@@ -377,7 +377,7 @@
                                             <h4 data-animation="zoomIn" data-delay="3s">Zink<span>,</span></h4>
                                         </div>
                                         <div class="col-my">
-                                            <h4 data-animation="zoomInRight" data-delay="4s">Visit<span>,</span></h4>
+                                            <h4 data-animation="zoomInRight" data-delay="4s">Visit<span class="d-none d-md-block">,</span></h4>
                                         </div>
                                         <div class="col-my d-none d-md-block">
                                             <h4 data-animation="fadeInRight" data-delay="5s"></h4>
@@ -406,7 +406,7 @@
                                             <h4 data-animation="zoomIn" data-delay="3s">Shy<span>,</span></h4>
                                         </div>
                                         <div class="col-my">
-                                            <h4 data-animation="zoomInRight" data-delay="4s">She<span>,</span></h4>
+                                            <h4 data-animation="zoomInRight" data-delay="4s">She<span class="d-none d-md-block">,</span></h4>
                                         </div>
                                         <div class="col-my d-none d-md-block">
                                             <h4 data-animation="fadeInRight" data-delay="5s">Shame</h4>
@@ -423,7 +423,7 @@
                         <div class="row mmdh pt-150 pb-150">
                             <div class="col-xl-12 col-lg-12 col-md-12">
                                 <div class="slider-content sound">
-                                    <h1 data-animation="zoomIn" data-delay=".5s">/ʒ/ - য ও জ</h1>
+                                    <h1 data-animation="zoomIn" data-delay=".5s">/ʒ/ - যওজ</h1>
                                     <div class="row text-center">
                                         <div class="col-my d-none d-md-block">
                                             <h4 data-animation="fadeInLeft" data-delay="1s">Measure<span>,</span></h4>
@@ -435,7 +435,7 @@
                                             <h4 data-animation="zoomIn" data-delay="3s">Usual<span>,</span></h4>
                                         </div>
                                         <div class="col-my">
-                                            <h4 data-animation="zoomInRight" data-delay="4s">Asia<span>,</span></h4>
+                                            <h4 data-animation="zoomInRight" data-delay="4s">Asia<span class="d-none d-md-block">,</span></h4>
                                         </div>
                                         <div class="col-my d-none d-md-block">
                                             <h4 data-animation="fadeInRight" data-delay="5s">Malaysia</h4>
@@ -464,7 +464,7 @@
                                             <h4 data-animation="zoomIn" data-delay="3s">Chat<span>,</span></h4>
                                         </div>
                                         <div class="col-my">
-                                            <h4 data-animation="zoomInRight" data-delay="4s">China<span>,</span></h4>
+                                            <h4 data-animation="zoomInRight" data-delay="4s">China<span class="d-none d-md-block">,</span></h4>
                                         </div>
                                         <div class="col-my d-none d-md-block">
                                             <h4 data-animation="fadeInRight" data-delay="5s">Chocolate</h4>
@@ -493,7 +493,7 @@
                                             <h4 data-animation="zoomIn" data-delay="3s">Jug<span>,</span></h4>
                                         </div>
                                         <div class="col-my">
-                                            <h4 data-animation="zoomInRight" data-delay="4s">Juice<span>,</span></h4>
+                                            <h4 data-animation="zoomInRight" data-delay="4s">Juice<span class="d-none d-md-block">,</span></h4>
                                         </div>
                                         <div class="col-my d-none d-md-block">
                                             <h4 data-animation="fadeInRight" data-delay="5s">Judge</h4>
@@ -522,7 +522,7 @@
                                             <h4 data-animation="zoomIn" data-delay="3s">Rat<span>,</span></h4>
                                         </div>
                                         <div class="col-my">
-                                            <h4 data-animation="zoomInRight" data-delay="4s">Roll<span>,</span></h4>
+                                            <h4 data-animation="zoomInRight" data-delay="4s">Roll<span class="d-none d-md-block">,</span></h4>
                                         </div>
                                         <div class="col-my d-none d-md-block">
                                             <h4 data-animation="fadeInRight" data-delay="5s">Random</h4>
@@ -551,7 +551,7 @@
                                             <h4 data-animation="zoomIn" data-delay="3s">List<span>,</span></h4>
                                         </div>
                                         <div class="col-my">
-                                            <h4 data-animation="zoomInRight" data-delay="4s">Touch<span>,</span></h4>
+                                            <h4 data-animation="zoomInRight" data-delay="4s">Touch<span class="d-none d-md-block">,</span></h4>
                                         </div>
                                         <div class="col-my d-none d-md-block">
                                             <h4 data-animation="fadeInRight" data-delay="5s">Lowest</h4>
@@ -580,7 +580,7 @@
                                             <h4 data-animation="zoomIn" data-delay="3s">Mad<span>,</span></h4>
                                         </div>
                                         <div class="col-my">
-                                            <h4 data-animation="zoomInRight" data-delay="4s">Model<span>,</span></h4>
+                                            <h4 data-animation="zoomInRight" data-delay="4s">Model<span class="d-none d-md-block">,</span></h4>
                                         </div>
                                         <div class="col-my d-none d-md-block">
                                             <h4 data-animation="fadeInRight" data-delay="5s">Must</h4>
@@ -609,7 +609,7 @@
                                             <h4 data-animation="zoomIn" data-delay="3s">Never<span>,</span></h4>
                                         </div>
                                         <div class="col-my">
-                                            <h4 data-animation="zoomInRight" data-delay="4s">Not<span>,</span></h4>
+                                            <h4 data-animation="zoomInRight" data-delay="4s">Not<span class="d-none d-md-block">,</span></h4>
                                         </div>
                                         <div class="col-my d-none d-md-block">
                                             <h4 data-animation="fadeInRight" data-delay="5s">Near</h4>
@@ -638,7 +638,7 @@
                                             <h4 data-animation="zoomIn" data-delay="3s">You<span>,</span></h4>
                                         </div>
                                         <div class="col-my">
-                                            <h4 data-animation="zoomInRight" data-delay="4s">Yellow<span>,</span></h4>
+                                            <h4 data-animation="zoomInRight" data-delay="4s">Yellow<span class="d-none d-md-block">,</span></h4>
                                         </div>
                                         <div class="col-my d-none d-md-block">
                                             <h4 data-animation="fadeInRight" data-delay="5s">Young</h4>
@@ -667,7 +667,7 @@
                                             <h4 data-animation="zoomIn" data-delay="3s">Wait<span>,</span></h4>
                                         </div>
                                         <div class="col-my">
-                                            <h4 data-animation="zoomInRight" data-delay="4s">We<span>,</span></h4>
+                                            <h4 data-animation="zoomInRight" data-delay="4s">We<span class="d-none d-md-block">,</span></h4>
                                         </div>
                                         <div class="col-my d-none d-md-block">
                                             <h4 data-animation="fadeInRight" data-delay="5s">Wonderful</h4>
@@ -696,7 +696,7 @@
                                             <h4 data-animation="zoomIn" data-delay="3s">Three<span>,</span></h4>
                                         </div>
                                         <div class="col-my">
-                                            <h4 data-animation="zoomInRight" data-delay="4s">Throw<span>,</span></h4>
+                                            <h4 data-animation="zoomInRight" data-delay="4s">Throw<span class="d-none d-md-block">,</span></h4>
                                         </div>
                                         <div class="col-my d-none d-md-block">
                                             <h4 data-animation="fadeInRight" data-delay="5s">Thousand</h4>
@@ -725,7 +725,7 @@
                                             <h4 data-animation="zoomIn" data-delay="3s">They<span>,</span></h4>
                                         </div>
                                         <div class="col-my">
-                                            <h4 data-animation="zoomInRight" data-delay="4s">Those<span>,</span></h4>
+                                            <h4 data-animation="zoomInRight" data-delay="4s">Those<span class="d-none d-md-block">,</span></h4>
                                         </div>
                                         <div class="col-my d-none d-md-block">
                                             <h4 data-animation="fadeInRight" data-delay="5s">There</h4>
@@ -754,7 +754,7 @@
                                             <h4 data-animation="zoomIn" data-delay="3s">Going<span>,</span></h4>
                                         </div>
                                         <div class="col-my">
-                                            <h4 data-animation="zoomInRight" data-delay="4s">Playing<span>,</span></h4>
+                                            <h4 data-animation="zoomInRight" data-delay="4s">Playing<span class="d-none d-md-block">,</span></h4>
                                         </div>
                                         <div class="col-my d-none d-md-block">
                                             <h4 data-animation="fadeInRight" data-delay="5s"></h4>
@@ -783,7 +783,7 @@
                                             <h4 data-animation="zoomIn" data-delay="3s">Hello<span>,</span></h4>
                                         </div>
                                         <div class="col-my">
-                                            <h4 data-animation="zoomInRight" data-delay="4s">Hate<span>,</span></h4>
+                                            <h4 data-animation="zoomInRight" data-delay="4s">Hate<span class="d-none d-md-block">,</span></h4>
                                         </div>
                                         <div class="col-my d-none d-md-block">
                                             <h4 data-animation="fadeInRight" data-delay="5s">Happy</h4>
